fix: enforce horizontal overflow hidden and word breaking in sidebar

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -13,6 +13,9 @@
   @include clearfix();
   margin-bottom: 1em;
   overflow-x: hidden;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-word;
 
   @media (orientation: portrait) {
     margin-top: 1em;
@@ -21,8 +24,11 @@
   @media screen and (min-width: $sidebar-screen-min-width) {
     height: 100vh;
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
+    overflow-x: hidden;             // Ensure no horizontal scrollbar
     position: fixed;
     padding-top: $masthead-height;
+    width: inherit;
+    max-width: inherit;
   }
 
   @include breakpoint($large) {
